Fixed some alignment issues with the hero

--- a/style.css
+++ b/style.css
@@ -314,7 +314,6 @@ section {
   justify-content: center;
   align-items: center;
   flex: 1;
-
 }
 
 .hero-column {
@@ -323,13 +322,17 @@ section {
 }
 
 .hero-content {
+  flex: 1;
     max-width: 1000px;
     padding: 0 1rem;
 }
 
 .hero-h1, .hero-h2, .hero-body {
   text-align: left;
-  opacity: 0;
+}
+
+.hero-h1, .hero-h2, .hero-body, .hero-button {
+    opacity: 0;
 }
 
 .hero-h1 {
@@ -346,6 +349,23 @@ section {
   max-width: 600px;
   animation: fadeIn 1s ease forwards;
   animation-delay: 2.5s;
+}
+
+.hero-button {
+  position: relative;
+  margin-top: auto;
+  width:auto;
+  text-align: center;
+  color: var(--color-nav-text);
+  background-color: rgba(0, 0, 0, 0.4);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+  transition: all 0.2s ease;
+  animation: fadeIn 1s ease forwards;
+  animation-delay: 3s;
+}
+
+.hero-button:hover {
+  transform: scale(1.1);
 }
 
 @keyframes fadeIn {
@@ -849,23 +869,6 @@ footer .column {
   color: white;
   transition: all 0.5s ease;
 
-}
-
-.hero-button {
-  position: absolute;
-  bottom:1rem;
-  width:20%;
-  justify-content: center;
-  text-align: center;
-  color: black;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
-  margin-top: auto;
-  transition: all 0.2s ease;
-  z-index: 3;
-}
-
-.hero-button:hover {
-  transform: scale(1.1);
 }
 
 .hero-content {
